// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-schema 1`] = `
<div
  className="schema mapper-element"
>
  <div
    className="schema-name"
  >
    schema
  </div>
  <div
    className="schema-content"
    onScroll={undefined}
  />
</div>
`;

exports[`single-schema 1`] = `
<div
  className="schema mapper-element"
>
  <div
    className="schema-name"
  >
    schema
  </div>
  <div
    className="schema-content"
    onScroll={undefined}
  >
    <div
      className="schema-element undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
      role="button"
    >
      element_1
    </div>
    <div
      className="schema-element undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
      role="button"
    >
      element_2
    </div>
    <div
      className="schema-element undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
      role="button"
    >
      element_3
    </div>
  </div>
</div>
`;
